--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>grow-ai</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="Grow Autonomous Solutions" />
     <meta name="author" content="Lovable" />
 
     <link rel="icon" href="/lovable-uploads/749b8430-d77c-4cc4-a025-8d2ae26a8f83.png" type="image/png">
 
     <meta property="og:title" content="grow-ai" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Grow Autonomous Solutions" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
